--- a/main.css
+++ b/main.css
@@ -6,8 +6,44 @@
 }
 
 body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: #333;
+  font-family: "Noto Sans", sans-serif;
+  color: var(--gray);
+}
+
+:root {
+  --periwinkle: #CCCCFF;
+  --white: #FFFFFF;
+  --black: #000000;
+  --lightGray: #dfdfdf;
+  --darkGray: #333;
+  --gray: #616161;
+  --blue: #0078d7;
+}
+
+header>nav>ul>li:not(:first-child):before {
+  content: "/";
+  color: #454545;
+  margin: 0 .5rem;
+}
+
+.navigation ul {
+  list-style: none;
+  display: flex;
+}
+
+.navigation li {
+  margin-left: auto;
+}
+
+.navigation a {
+  text-decoration: none;
+  color: var(--blue);
+}
+
+/* Стилизация ссылок при наведении */
+.navigation a:hover {
+  /*Подчёркивание ссылок при наведении*/
+  text-decoration: underline;
 }
 
 .img-git {
@@ -17,62 +53,192 @@ body {
 }
 
 .header {
-  background-color: #f3f3f3;
+  background-color: var(--lightGray);
   padding: 10px 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.navigation ul {
-  list-style: none;
-  display: flex;
-}
-
-.navigation li {
-  margin-left: 20px;
-}
-
-.navigation a {
-  text-decoration: none;
-  color: #0078d7;
-}
-
 .hero {
-  background-color: #0078d7;
-  color: white;
+  background-image: url('Images/58488-pole_cvety2.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: var(--blue);
+  color: var(--white);
   padding: 50px 20px;
   text-align: center;
 }
+  
+.container-card {
+  display: flex;
+  /*Расположение с равными отступами между ними*/
+  justify-content: space-around;
+  /*Выравнивание по центру*/
+  align-items: center;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: auto;
+  border-radius: 5px; /* Добавляет скругленные углы к карточке */
+  display: inline-block;
+  margin: 10px;
+  text-align: center;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+  padding: 2px 16px;
+}
+
+.card img {
+  border-radius: 5px 5px 0 0; /* Добавляет скругленные углы к верхней части изображения */
+  width: 244px; 
+  height: 300px;
+}
+
+@media (max-width:600px) {
+  .card {
+    width: 100%;
+    display: block;
+  }
+}
+
+/*.image-row {
+  display: flex;
+  /*Расположение изображений с равными отступами между ними
+  justify-content: space-around;
+  /*Выравнивание изображений по центру
+  align-items: center;
+  padding: 10px;
+}*/
 
 .main-content {
   padding: 20px;
 }
 
 .interlayer {
-  background-color: #f3f3f3;
+  background-color: var(--lightGray);
   text-align: center;
   padding: 10px 20px;
 }
 
-.product {
-  max-width: 30%;
+.col {
+  position: relative;
+  width: 100%;
+  padding-right: .75rem;
+  padding-left: .75rem;
+}
+.material-card {
+  position: relative;
+  width: 100%;
+  padding-right: .75rem;
+  padding-left: .75rem;
+}
+
+.hr {
+  border: 15px solid var(--darkGray);
+  color: var(--white);
+  background-color: var(--darkGray);
+  text-align: center;
+  font-size: 20px;
+}
+
+.head2 {
+  font-size: 50px;
+  text-align: center;
+  padding: 10px;
+}
+
+.cell-container1 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto;
+  align-items: center;
+}
+
+.cell-img1 {
+  height: 350px;
+  width: 688px;
+}
+
+.cell-img2 {
+  height: 450px;
+  width: 450px;
+}
+
+.cell-container2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto;
+  align-items: center;
+}
+
+.cell {
+  text-align: center;
+}
+
+.arrow-container {
+  display: grid;
+  text-align: center;
+}
+
+.arrow-img {
+  width: 150px;
+  height: 150px;
+}
+
+.info {
+  max-width: 100%;
   height: auto;
 }
 
 .footer {
-  background-color: #f3f3f3;
-  text-align: center;
+  background-image: url('Images/58488-pole_cvety2.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  /*background-color: var(--lightGray);*/
+  text-align: left;
   padding: 10px 20px;
 }
 
-.info-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto auto;
+.footer-container {
+  display: flex;
+  justify-content: space-between;
 }
 
-.info-container img {
-  height: 300px;
-  width: 244px;
+.align {
+  display: flex;
+}
+
+.btn {
+  position: relative;
+  width: 70px;
+  height: 30px;
+  border-radius: 3px;
+  border: 1px solid var(--white);
+  text-align: center;
+  cursor: pointer;
+  font-family: 'Segoe UI';
+  color: var(--white);
+  background-color: var(--blue);
+}
+
+.btn:hover {
+  background-color: #115e9b;
+}
+
+.button:active {
+  background-color: #115e9b;
+}
+
+.inc {
+  color: var(--white);
 }
